Fixed buttons being cut off in IE11 (#796)

--- a/src/components/BookmarksPanel/BookmarksPanel.scss
+++ b/src/components/BookmarksPanel/BookmarksPanel.scss
@@ -24,6 +24,7 @@
       align-items: center;
       color: var(--primary-button-text);
       padding: 6px 18px;
+      width: auto;
       width: fit-content;
       background: var(--primary-button);
       border-radius: 4px;
