--- a/src/constants/modal.scss
+++ b/src/constants/modal.scss
@@ -30,6 +30,7 @@ $modal-z-index: 100;
       align-items: center;
       padding: 6px 18px;
       margin-top: 8px;
+      width: auto;
       width: fit-content;
       border-radius: 4px;
       height: 30px;
